# pythton-webscrapper

./: README.md  pyproject.toml
src/webscrapper/: __init__.py  __main__.py  webscrapper.py
