[project]
name = "WebScrapper"
description = "python project for web scrapping"
version = "0.1.0"
authors = [
    { name = "Sergio Garnica", email = "sgarnica1902@gmail.com" }
]

dependencies = ["beautifulsoup4", "requests", "pandas"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
webscrapper = "webscrapper.webscrapper:main"